# bootstrap_cmds

./: .gitignore  meson.build  rust-project.json
migcom_rs/src/: ast.rs  diag.rs  global.rs  lexer.rs  lower.rs  main.rs  parser.rs  types.rs
migcom_rs/src/codegen/: header.rs  mod.rs  server.rs  user.rs  utils.rs
subprojects/: annotate-snippets.wrap  anstyle.wrap  unicode-width.wrap  winnow.wrap
